--- a/MyTeamMood-Angular/src/styles.scss
+++ b/MyTeamMood-Angular/src/styles.scss
@@ -37,6 +37,12 @@
   p {
     font-size: 14px;
   }
+
+  .titre {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: xx-large;
+    margin: 50px;
+}
   
   /* Hyperlink */
   
