--- a/MyTeamMood-Angular/src/app/app.component.html
+++ b/MyTeamMood-Angular/src/app/app.component.html
@@ -3,3 +3,7 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<div class="messages">
+  <app-messages></app-messages>
+</div>
