--- a/MyTeamMood-Angular/src/app/top-bar/top-bar.component.scss
+++ b/MyTeamMood-Angular/src/app/top-bar/top-bar.component.scss
@@ -37,17 +37,17 @@
   }
   
   /* Show the dropdown menu on hover */
-  //.dropdown:hover .dropdown-content{
-  //  display: block;
-  //}
-
+  .dropdown:hover .dropdown-content{
+    display: block;
+  }
+/*
   #trigger {
     display: none;
   }
   #trigger:checked + .dropdown:hover {
     display: block;
   }
-  
+*/ 
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
     background-color: #fc4902;
